--- a/Bicycle/Bicycle.csproj
+++ b/Bicycle/Bicycle.csproj
@@ -242,6 +242,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\situation.js" />
     <Content Include="Scripts\userInfo.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
@@ -260,6 +261,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\UserInfo.cshtml" />
     <Content Include="Views\User\Bicycle.cshtml" />
+    <Content Include="Views\User\Situation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
