--- a/Bicycle/Bicycle.csproj
+++ b/Bicycle/Bicycle.csproj
@@ -162,7 +162,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
     <Compile Include="Filters\UserAuthorizeAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -170,6 +172,7 @@
     <Compile Include="Models\BicycleService.cs" />
     <Compile Include="Models\DBModel.cs" />
     <Compile Include="Models\LoginService.cs" />
+    <Compile Include="Models\ManagerService.cs" />
     <Compile Include="Models\module_bicycle.cs" />
     <Compile Include="Models\module_login.cs" />
     <Compile Include="Models\module_manager.cs" />
@@ -191,6 +194,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\admin.css" />
     <Content Include="Content\bicycle.css" />
     <Content Include="Content\bootstrap-responsive.css" />
     <Content Include="Content\bootstrap-responsive.min.css" />
@@ -209,6 +213,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\adminbicycle.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -262,6 +267,8 @@
     <Content Include="Views\User\UserInfo.cshtml" />
     <Content Include="Views\User\Bicycle.cshtml" />
     <Content Include="Views\User\Situation.cshtml" />
+    <Content Include="Views\Shared\_LayoutPageAdmin.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
