--- a/Bicycle/Bicycle.csproj
+++ b/Bicycle/Bicycle.csproj
@@ -169,10 +169,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BicycleService.cs" />
+    <Compile Include="Models\dto\SiteTable.cs" />
+    <Compile Include="Models\Service\BicycleService.cs" />
+    <Compile Include="Models\dto\BicycleTable.cs" />
     <Compile Include="Models\DBModel.cs" />
-    <Compile Include="Models\LoginService.cs" />
-    <Compile Include="Models\ManagerService.cs" />
+    <Compile Include="Models\Service\LoginService.cs" />
+    <Compile Include="Models\Service\ManagerService.cs" />
+    <Compile Include="Models\dto\ModuleRented.cs" />
     <Compile Include="Models\module_bicycle.cs" />
     <Compile Include="Models\module_login.cs" />
     <Compile Include="Models\module_manager.cs" />
@@ -181,11 +184,11 @@
     <Compile Include="Models\module_rented.cs" />
     <Compile Include="Models\module_site.cs" />
     <Compile Include="Models\module_user.cs" />
-    <Compile Include="Models\ParkService.cs" />
-    <Compile Include="Models\RentalCardService.cs" />
-    <Compile Include="Models\RentedService.cs" />
-    <Compile Include="Models\SiteService.cs" />
-    <Compile Include="Models\UserService.cs" />
+    <Compile Include="Models\Service\ParkService.cs" />
+    <Compile Include="Models\Service\RentalCardService.cs" />
+    <Compile Include="Models\Service\RentedService.cs" />
+    <Compile Include="Models\Service\SiteService.cs" />
+    <Compile Include="Models\Service\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
