--- a/Bicycle/Bicycle.csproj
+++ b/Bicycle/Bicycle.csproj
@@ -169,6 +169,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\dto\ModuleBicycle.cs" />
+    <Compile Include="Models\dto\ModuleManager.cs" />
+    <Compile Include="Models\dto\ModulePark.cs" />
+    <Compile Include="Models\dto\ModuleSite.cs" />
     <Compile Include="Models\dto\SiteTable.cs" />
     <Compile Include="Models\Service\BicycleService.cs" />
     <Compile Include="Models\dto\BicycleTable.cs" />
